// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/empty.proto";

import "google/protobuf/timestamp.proto";

option go_package = "blueprint/ent/proto/entpb";

message Post {
  string id = 1;

  google.protobuf.Timestamp created_at = 2;

  google.protobuf.Timestamp updated_at = 3;

  string user_id = 4;

  string content = 5;
}

message CreatePostRequest {
  Post post = 1;
}

message GetPostRequest {
  string id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdatePostRequest {
  Post post = 1;
}

message DeletePostRequest {
  string id = 1;
}

message ListPostRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListPostResponse {
  repeated Post post_list = 1;

  string next_page_token = 2;
}

message BatchCreatePostsRequest {
  repeated CreatePostRequest requests = 1;
}

message BatchCreatePostsResponse {
  repeated Post posts = 1;
}

message User {
  string id = 1;

  google.protobuf.Timestamp created_at = 2;

  google.protobuf.Timestamp updated_at = 3;

  int64 age = 4;

  string name = 5;
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  string id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message ListUserRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListUserResponse {
  repeated User user_list = 1;

  string next_page_token = 2;
}

message BatchCreateUsersRequest {
  repeated CreateUserRequest requests = 1;
}

message BatchCreateUsersResponse {
  repeated User users = 1;
}

service PostService {
  rpc Create ( CreatePostRequest ) returns ( Post );

  rpc Get ( GetPostRequest ) returns ( Post );

  rpc Update ( UpdatePostRequest ) returns ( Post );

  rpc Delete ( DeletePostRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListPostRequest ) returns ( ListPostResponse );

  rpc BatchCreate ( BatchCreatePostsRequest ) returns ( BatchCreatePostsResponse );
}

service UserService {
  rpc Create ( CreateUserRequest ) returns ( User );

  rpc Get ( GetUserRequest ) returns ( User );

  rpc Update ( UpdateUserRequest ) returns ( User );

  rpc Delete ( DeleteUserRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListUserRequest ) returns ( ListUserResponse );

  rpc BatchCreate ( BatchCreateUsersRequest ) returns ( BatchCreateUsersResponse );
}
